  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

### Standard library:

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11354: Hashtbl.find_all is now tail-recursive.
  (Fermín Reig, review by Gabriel Scherer)

- #11362: Rewrite List.map, List.mapi and List.map2 using TRMC, making them
  faster as well as tail-recursive.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #11412: Add Sys.is_regular_file
  (Xavier Leroy, review by Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #11402: Rewrite List.init, List.filter, List.filteri, List.filter_map and
  List.of_seq using TRMC instead of an accumulator, making them faster and
  halving memory usage while remaining tail-recursive.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

### Other libraries:

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

### Tools:

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11481: Fix the type of Unix.umask to Unix.file_perm -> Unix.file_perm
  (Favonia, review by Sébastien Hinderer)

### Compiler user-interface and warnings:
