@@ -47,6 +47,8 @@ let cmi_file = ref None
 let compile_only = ref false            (* -c *)
 and output_name = ref (None : string option) (* -o *)
 and include_dirs = ref ([] : string list)(* -I *)
+and global_string_constants = ref ([] : (string * string) list)
+                                        (* -set-global-string *)
 and no_std_include = ref false          (* -nostdlib *)
 and no_cwd = ref false                  (* -nocwd *)
 and print_types = ref false             (* -i *)
