@@ -75,6 +75,7 @@ val cmi_file : string option ref
 val compile_only : bool ref
 val output_name : string option ref
 val include_dirs : string list ref
+val global_string_constants : (string * string) list ref
 val no_std_include : bool ref
 val no_cwd : bool ref
 val print_types : bool ref
